--- a/index.html
+++ b/index.html
@@ -14,11 +14,92 @@
             <!-- Backlog Column -->
             <li class="drag-column backlog-column">
                 <span class="header">
-                    <h1>BackLog</h1>
+                    <h1>Backlog</h1>
                 </span>
                 <!-- Backlog content -->
                 <div id="backlog-content">
                     <ul class="drag-item-list" id="backlog-list">
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing1</li>
+                        <li class="drag-item">Testing2</li>
+                    </ul>
+                </div>
+                <!-- Add button group -->
+                <div class="add-btn-group">
+                    <div class="add-btn">
+                        <span class="plus-sign">+</span>
+                        <span>Add Item</span>
+                    </div>
+                    <div class="add-btn solid">
+                        <span>Save Item</span>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item"></div>
+                    </div>
+                </div>
+            </li>
+            <!-- progress Column -->
+            <li class="drag-column progress-column">
+                <span class="header">
+                    <h1>progress</h1>
+                </span>
+                <!-- progress content -->
+                <div id="progress-content">
+                    <ul class="drag-item-list" id="progress-list">
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing1</li>
+                        <li class="drag-item">Testing2</li>
+                    </ul>
+                </div>
+                <!-- Add button group -->
+                <div class="add-btn-group">
+                    <div class="add-btn">
+                        <span class="plus-sign">+</span>
+                        <span>Add Item</span>
+                    </div>
+                    <div class="add-btn solid">
+                        <span>Save Item</span>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item"></div>
+                    </div>
+                </div>
+            </li>
+            <!-- complete Column -->
+            <li class="drag-column complete-column">
+                <span class="header">
+                    <h1>complete</h1>
+                </span>
+                <!-- complete content -->
+                <div id="complete-content">
+                    <ul class="drag-item-list" id="complete-list">
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing1</li>
+                        <li class="drag-item">Testing2</li>
+                    </ul>
+                </div>
+                <!-- Add button group -->
+                <div class="add-btn-group">
+                    <div class="add-btn">
+                        <span class="plus-sign">+</span>
+                        <span>Add Item</span>
+                    </div>
+                    <div class="add-btn solid">
+                        <span>Save Item</span>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item"></div>
+                    </div>
+                </div>
+            </li>
+            <!-- on-hold Column -->
+            <li class="drag-column on-hold-column">
+                <span class="header">
+                    <h1>on hold</h1>
+                </span>
+                <!-- on-hold content -->
+                <div id="on-hold-content">
+                    <ul class="drag-item-list" id="on-hold-list">
                         <li class="drag-item">Testing</li>
                         <li class="drag-item">Testing1</li>
                         <li class="drag-item">Testing2</li>
