script.js updated to update localStorage to save each columns item lists

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                 necessitatibus repellat aut ullam nulla molestiae nostrum, sunt
                 aspernatur, vel dolor eligendi. Quidem veniam doloremque autem?
               </li>
+              <li class="drag-item">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Repellendus voluptate deserunt aperiam pariatur odit
+                necessitatibus repellat aut ullam nulla molestiae nostrum, sunt
+                aspernatur, vel dolor eligendi. Quidem veniam doloremque autem?
+              </li>
             </ul>
           </div>
           <!-- Add button group -->
