saved items are now loaded from LocalStorage

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
           </span>
           <!-- Backlog content -->
           <div id="backlog-content" class="custom-scroll">
-            <ul class="drag-item-list" id="backlog-list">
-              <li class="drag-item">Testing</li>
-              <li class="drag-item">Testing1</li>
-              <li class="drag-item">Testing2</li>
-            </ul>
+            <ul class="drag-item-list" id="backlog-list"></ul>
           </div>
           <!-- Add button group -->
           <div class="add-btn-group">
@@ -45,11 +41,7 @@
           </span>
           <!-- progress content -->
           <div id="progress-content" class="custom-scroll">
-            <ul class="drag-item-list" id="progress-list">
-              <li class="drag-item">Testing</li>
-              <li class="drag-item">Testing1</li>
-              <li class="drag-item">Testing2</li>
-            </ul>
+            <ul class="drag-item-list" id="progress-list"></ul>
           </div>
           <!-- Add button group -->
           <div class="add-btn-group">
@@ -72,11 +64,7 @@
           </span>
           <!-- complete content -->
           <div id="complete-content" class="custom-scroll">
-            <ul class="drag-item-list" id="complete-list">
-              <li class="drag-item">Testing</li>
-              <li class="drag-item">Testing1</li>
-              <li class="drag-item">Testing2</li>
-            </ul>
+            <ul class="drag-item-list" id="complete-list"></ul>
           </div>
           <!-- Add button group -->
           <div class="add-btn-group">
@@ -99,35 +87,7 @@
           </span>
           <!-- on-hold content -->
           <div id="on-hold-content" class="custom-scroll">
-            <ul class="drag-item-list" id="on-hold-list">
-              <li class="drag-item">Testing</li>
-              <li class="drag-item">Testing1</li>
-              <li class="drag-item">Testing2</li>
-              <li class="drag-item">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Repellendus voluptate deserunt aperiam pariatur odit
-                necessitatibus repellat aut ullam nulla molestiae nostrum, sunt
-                aspernatur, vel dolor eligendi. Quidem veniam doloremque autem?
-              </li>
-              <li class="drag-item">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Repellendus voluptate deserunt aperiam pariatur odit
-                necessitatibus repellat aut ullam nulla molestiae nostrum, sunt
-                aspernatur, vel dolor eligendi. Quidem veniam doloremque autem?
-              </li>
-              <li class="drag-item">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Repellendus voluptate deserunt aperiam pariatur odit
-                necessitatibus repellat aut ullam nulla molestiae nostrum, sunt
-                aspernatur, vel dolor eligendi. Quidem veniam doloremque autem?
-              </li>
-              <li class="drag-item">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Repellendus voluptate deserunt aperiam pariatur odit
-                necessitatibus repellat aut ullam nulla molestiae nostrum, sunt
-                aspernatur, vel dolor eligendi. Quidem veniam doloremque autem?
-              </li>
-            </ul>
+            <ul class="drag-item-list" id="on-hold-list"></ul>
           </div>
           <!-- Add button group -->
           <div class="add-btn-group">
