--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="add-container">
-            <div class="add-item"></div>
+            <div class="add-item" contenteditable="true"></div>
           </div>
         </li>
         <!-- progress Column -->
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="add-container">
-            <div class="add-item"></div>
+            <div class="add-item" contenteditable="true"></div>
           </div>
         </li>
         <!-- complete Column -->
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="add-container">
-            <div class="add-item"></div>
+            <div class="add-item" contenteditable="true"></div>
           </div>
         </li>
         <!-- on-hold Column -->
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="add-container">
-            <div class="add-item"></div>
+            <div class="add-item" contenteditable="true"></div>
           </div>
         </li>
       </ul>
